@@ -1,6 +1,6 @@
 /** @page apreq_status STATUS
 
-     2.05-dev released on May 5, 2005.
+     2.06 under development.
 
 Contributors looking for a mission:
 
@@ -8,16 +8,6 @@ Contributors looking for a mission:
 
 
 CURRENT RELEASE NOTES:
-
-    - This is a developer release, indicated by the "-dev" suffix on the
-      version string. We believe the core interfaces to be stable, but some
-      portions of the API may still need significant modification. Thus,
-      binary/source compatibility may be broken from one developer release to
-      the next. In particular the version numbering rules specified at 
-
-          http://apr.apache.org/versioning.html
-
-      do not apply to developer releases.
 
 
 RELEASE SHOWSTOPPERS:
