@@ -2,6 +2,10 @@
 @brief List of major changes.
 
 
+@section v2_06 Changes with libapreq2-2.06
+
+
+
 @section v2_05_dev Changes with libapreq2-2.05-dev (released May 5, 2005)
 
 
